Added: Telegram Reconnection
